# seawave-animation

./: LICENSE  README.md  modeling.cpp  modeling.hpp
src/: CMakeLists.txt  LICENSE.md  Makefile  README.md  imgui.ini  update_scene_include.py
src/doc/: compilation.md  config_doxygen  qtcreator.md  visual_studio.md  visual_studio_cmake.md  visual_studio_project.md
src/lib_windows/glfw3_win/: README.txt
src/main/: main.cpp
src/main/helper_scene/: helper_scene.cpp  helper_scene.hpp
src/main/scene_base/: base.cpp  base.hpp
src/scenes/: current_scene.hpp  scenes.hpp
src/scenes/3D_graphics/01_modeling/: modeling.hpp
src/vcl/: vcl.hpp
src/vcl/base/: base.hpp
src/vcl/base/basic_types/: basic_types.cpp  basic_types.hpp
src/vcl/base/error/: error.cpp  error.hpp
src/vcl/base/file/: file.cpp  file.hpp
src/vcl/base/rand/: rand.cpp  rand.hpp
src/vcl/base/stl/: stl.hpp
src/vcl/base/string/: string.cpp  string.hpp
src/vcl/base/types/: types.hpp
src/vcl/containers/: containers.hpp
src/vcl/containers/buffer/: buffer.hpp
src/vcl/containers/buffer_stack/: buffer_stack.hpp
src/vcl/interaction/: interaction.hpp
src/vcl/interaction/camera/: camera.cpp  camera.hpp
src/vcl/interaction/camera_control_glfw/: camera_control_glfw.cpp  camera_control_glfw.hpp
src/vcl/interaction/picking/: picking.hpp
src/vcl/interaction/screen_motion/: screen_motion.cpp  screen_motion.hpp
src/vcl/interaction/time_period/: time_period.cpp  time_period.hpp
src/vcl/math/: math.hpp
src/vcl/opengl/: opengl.hpp
src/vcl/shape/: shape.hpp
src/vcl/wrapper/: wrapper.hpp
(+114 files in other folders)
